Sat Nov 29 04:35:03 CET 2003 (tk)
---------------------------------
  * clamd: UseProcesses: use processes instead of threads (initial version)

Thu Nov 27 00:51:03 CET 2003 (tk)
---------------------------------
  * clamd: also update database timestamps after RELOAD and not only SelfCheck
	   (problem with double reloading reported by Ole Stanstrup
	   <ole*stanstrup.dk> and Alex Pleiner <pleiner*zeitform.de>)
  * examples/ex1.c: initialize the signature counter to 0 (thanks to Rainer
		    Link) [I should read clamdoc.pdf more carefully ;-)]

Wed Nov 26 14:31:49 CET 2003 (tk)
---------------------------------
  * examples/ex1.c: fixed a compilation warning (thanks to Rainer Link)

Tue Nov 25 11:28:28 IST 2003 (njh)
----------------------------------
  * clamav-milter: Handle empty hostname or hostaddr
	Thanks to Michael Dankov <misha@btrc.ru> for the idea

Mon Nov 24 17:18:03 CET 2003 (tk)
---------------------------------
  * libclamav: cvd.c: small cleanups
  * included mbox testing tool (test/mbox/debugm.c) from Nigel

Mon Nov 24 10:19:48 IST 2003 (njh)
----------------------------------
  * clamav-milter: Support AllowSupplementaryGroups

Sun Nov 23 23:40:53 CET 2003 (tk)
---------------------------------
  * clamd: redirect the descriptors 1 and 2 to /dev/null by default, to
	   protect against a lock with Debug when Foreground is not enabled

Sat Nov 22 17:23:10 IST 2003 (njh)
----------------------------------
  * clamav-milter: Drop root privileges and support quarantine

Fri Nov 21 12:58:02 IST 2003 (njh)
---------------------------------
  * libclamav:	Scan multipart alternatives that have no boundaries, finds some
  		uuencoded happy99

Wed Nov 19 16:34:04 GMT 2003 (njh)
---------------------------------
  * clamav-milter: Close cmdSocket earlier
		Added setpgrp()

Mon Nov 17 13:28:16 IST 2003 (njh)
----------------------------------
  * libclamav:	Prevent buffer overflow in broken uuencoded files
		Handle spaces at the end of lines of MIME headers
